# BetaMonitor

./: BetaMon.cc  CMakeLists.txt  README.md
dat/: 19NeDecay.txt  6HeDecay5.txt  90Sr90YDecaycdf.txt  90SrDecaypdf.txt  90YDecaypdf.txt  run1.mac  run2-v1.mac  run2.mac
include/: ActionInitialization.hh  BM_Detector.hh  BM_EventAction.hh  BM_Hit.hh  BM_Output.hh  BM_PrimaryGenerator.hh  BM_RunAction.hh  BM_SD.hh  BM_SteppingAction.hh  BM_TrackInfo.hh  BM_TrackingAction.hh  FileReader.hh  MagneticField.hh  PMT.hh  StepMax.hh  StepMaxMessenger.hh  nat_units.hh
mac/: run1-v1.mac  run3.mac  vis-v1.mac  vis.mac
src/: ActionInitialization.cc  BM_Detector.cc  BM_EventAction.cc  BM_Hit.cc  BM_Output.cc  BM_PrimaryGenerator.cc  BM_RunAction.cc  BM_SD.cc  BM_SteppingAction.cc  BM_TrackInfo.cc  BM_TrackingAction.cc  FileReader.cc  MagneticField.cc  StepMax.cc  StepMaxMessenger.cc
test/: BM_Detector.cc  BetaMonitorAnalysis.ipynb  OutputChanger.py  TT_Output.cc  TT_Outputhh.txt  scrap.py
